2009-11-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: Fix respawn hack to not include the filename
	in the arguments.

2009-11-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Job.cs:
	* JobWindows.cs:
	* ProcessHelper.cs:
	* ProcessHelperWindows.cs: Add a new Job class that is an improved
	version of a Process: it can kill all its descendants too. On Windows
	implement this using the JobObject Win32 api, on the rest of the archs
	continue finding process descendants manually.

	* MonkeyWrench.csproj: Add new files.

	* Configuration.cs: Add a respawn hack.

2009-11-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: On Windows look in MyDocuments folder too when
	searching for a MonkeyWrench.xml.

2009-11-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ProcessHelper.cs: For process stuff consider cygwin as Windows.

2009-11-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: Add cygwin detection methods.

2009-11-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: The include dir is named include, not install.

2009-11-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: Add support for C[PLUS]_INCLUDE_PATH.

2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* FileUtilities.cs: If gzunzip didn't finish in time and we fail to
	kill the gzunzip process, it most likely finished just before we
	tried to kill it - assume everything is ok.

2009-11-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* FileUtilities.cs: When done decompressing using GZipStream, delete
	the input file (as gunzip does). Also if we move the input file based
	on the extension, delete any previous file with the same target name.

2009-11-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* FileUtilities.cs: Add a GZipStream decompress implementation.

2009-11-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* FileUtilities.cs: Fix eol.

2009-10-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>
